# pdf-rag-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: routes_ask.py  routes_system.py  routes_upload.py
app/core/: config.py
app/services/: embeddings.py  pdf_loader.py  rag_pipeline.py  text_splitter.py  vectorstore.py
tests/: conftest.py  test_endpoints.py  test_rag_pipeline.py  test_vectorstore.py
