[tool.poetry]
name = "pfd-rag-assistant"
version = "0.1.0"
description = ""
packages = [{ include = "app" }]
authors = ["Daniel <danya2zxc@gmail.com>"]
readme = "README.md"




[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
pydantic = ">=2.11.7,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
pypdf2 = ">=3.0.1,<4.0.0"
python-multipart = ">=0.0.20,<0.0.21"
langchain = ">=0.3.27,<0.4.0"
langchain-community = ">=0.3.29,<0.4.0"
openai = "^1.107.2"
faiss-cpu = "^1.12.0"
numpy = "^2.3.3"


[tool.poetry.group.gpu.dependencies]
sentence-transformers = "^5.1.0"
torch = "^2.8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"




[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]  

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
